src/4widgets/workingMansTable/ui/WorkingMansTableCell.module.scss
.WorkingMansTableCell {
  border: solid 1px black;

  &.Q1 {
    background-color: var(--FIRST_QUARTER);
  }
  &.Q2 {
    background-color: var(--SECOND_QUARTER);
  }
  &.Q3 {
    background-color: var(--THIRD_QUARTER);
  }
  &.Q4 {
    background-color: var(--FOURTH_QUARTER);
  }

  &.transparent {
    &.Q1 {
      background-color: var(--FIRST_QUARTER_TRANSPARENT);
    }
    &.Q2 {
      background-color: var(--SECOND_QUARTER_TRANSPARENT);
    }
    &.Q3 {
      background-color: var(--THIRD_QUARTER_TRANSPARENT);
    }
    &.Q4 {
      background-color: var(--FOURTH_QUARTER_TRANSPARENT);
    }
  }
}

